# nav2_proximity_wait

./: CMakeLists.txt  README.md  package.xml
bt_xml/: navigate_w_proximity_wait.xml
config/: bt_navigator_proximity.yaml  fleet_config.yaml
include/nav2_proximity_wait/: check_robot_proximity.hpp
src/: check_robot_proximity.cpp
